--- a/client/bouf.html
+++ b/client/bouf.html
@@ -67,7 +67,7 @@
 			</div>
 			
 			<h5 class="text-center">
-				Confiance - Plus de choix - Économique - Produit frais.
+				Confiance - Un large choix - Économique - Produit frais.
 			</h5><br/>
 			<div class="row clearfix">
 				<div class="col-xs-3 col-sm-3 col-md-3">
@@ -206,7 +206,7 @@
 	<div class="row clearfix">
 		<div class="col-xs-12 col-sm-12 col-md-12 ">
 		<div id="marche">
-		<div id="comment">
+		<div id="comment">											
 			<br/><h1 class="text-center">
 			<strong>
 				Comment ça marche?
@@ -216,7 +216,7 @@
 				<div class="col-xs-3 col-sm-3 col-md-3">
 					<img alt="140x140" src="/img/cook-128.png" class="img-circle" />
 					<h5>
-						Choix de repas + Cuisinier(ère)
+						Choix de repas + cookuisinier(ère)
 					</h5>
 				</div>
 				<div class="col-xs-3 col-sm-3 col-md-3">
