--- a/client/bouf.html
+++ b/client/bouf.html
@@ -67,7 +67,7 @@
 			</div>
 			
 			<h5 class="text-center">
-				Confiance - Un large choix - Économique - Produit frais.
+				Confiance - Un large choix - Économique - Produits frais.
 			</h5><br/>
 			<div class="row clearfix">
 				<div class="col-xs-3 col-sm-3 col-md-3">
@@ -99,7 +99,7 @@
 <div class="mc-field-group">
 	<!-- <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
 </label> -->
-	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" autocomplete="off" placeholder="Adresse émail" required >
+	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" autocomplete="off" placeholder="Adresse email" required >
 </div>
 <div class="mc-field-group">
 <!-- 	<label for="mce-MMERGE1">Zip Code </label>
@@ -216,7 +216,7 @@
 				<div class="col-xs-3 col-sm-3 col-md-3">
 					<img alt="140x140" src="/img/cook-128.png" class="img-circle" />
 					<h5>
-						Choix de repas + cookuisinier(ère)
+						Choix de repas + Cuisinier
 					</h5>
 				</div>
 				<div class="col-xs-3 col-sm-3 col-md-3">
